IMPALA-4153: Return valid non-NULL pointer for 0-byte allocations

This patch fixes CDH-43512: empty columns stored in RCFiles break COUNT(*).

The main change is that zero-length memory allocation requests result
in a valid pointer being returned instead of a NULL pointer. The pointer
points to a specific memory location. The fix combines contributions
from two different upstream commits:

IMPALA-2399, commit 9ed3b685a109559fad8dd94f6c03af93e164305a),
only the details that change MemPool to return a valid pointer
for zero-length requests,

IMPALA-1619: adds MemPool::EmptyAllocPtr() to encapsulate
the implementation of the handcrafted pointer returned
for zero-length requests. No other details imported.

IMPALA-3018: Don't return NULL on zero length allocations.
FunctionContext::Allocate() and FunctionContext::AllocateLocal()
used to return NULL for zero length allocations. This makes
it hard to distinguish between allocation failures and zero
length allocations. Such confusion may lead to DCHECK failure
in the macro RETURN_IF_NULL() in debug builds or access to NULL
pointers in non-debug builds.

This change fixes the problem above by returning NULL only if
there is allocation failure. Zero-length allocations will always
return a dummy non-NULL pointer.

Reviewed-on: http://gerrit.cloudera.org:8080/3601
Reviewed-by: Michael Ho <kwho@cloudera.com>
Tested-by: Internal Jenkins

The patch adds an end-to-end test case as well.

Change-Id: I7979153edfc4448bcd6f826cac81291374b91528
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/16401
Reviewed-by: Huaisi Xu <hxu@cloudera.com>
Tested-by: Gaal Laszlo <laszlo.gaal@cloudera.com>
(cherry picked from commit f0468fb318edcd07235e33cd96c15c68b52d756c)